# trt_yolo_video_pipeline

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Old_README.md  README.md  config.json  labels.txt  run.sh  run_service.sh  run_test.sh  service.py  ~
addons/: BuildBaseEnv.sh
addons/ffmpeg-5.1.2/: config.asm  config.h  config_components.h  ffmpeg  ffmpeg_g  ffplay  ffplay_g  ffprobe  ffprobe_g
build1/: CMakeCache.txt  Makefile  cmake_install.cmake  test_yolo_detect
build_cpp/: CMakeCache.txt  Makefile  cmake_install.cmake  test_yolo_detect
cmake/: base.cmake  cuda.cmake  tensorrt.cmake  test.cmake  triton.cmake
logs/: log.txt  log1.txt  log2.txt  run_log.txt
src/: main.cpp
src/base/: ProcessNode.cpp  ProcessNode.hpp  TransferData.h
src/config/: pipeline_demo.json
src/ffmpeg/: FFmpegInputNode.cpp  FFmpegInputNode.h  FFmpegframe.h  StreamPusher.cpp  StreamPusher.h  xcodec.cpp  xcodec.h  xdecode.cpp  xdecode.h  xdemux.cpp  xdemux.h  xencode.cpp  xencode.h  xformat.cpp  xformat.h  xmux.cpp  xmux.h  xscale.cpp  xscale.h  xtools.cpp  xtools.h
src/infer/: Infer.h  InferInstance.cpp  InferInstance.h  InferManager.cpp  InferManager.h  InferNode.cpp  InferNode.h  InferPipeline.cpp  InferPipeline.h  MultipleInferenceInstances.h
src/pipeline/: MultiGPUYolov8TRTInfer.cpp  MultiGPUYolov8TRTInfer.h  Pipeline.cpp  Yolov8Pipeline.cpp  Yolov8Pipeline.h
src/trt/: image_draw_node.cpp  image_draw_node.hpp  trt_node.cpp  trt_node.hpp  yolo.cu  yolo.hpp
src/utils/: ConfigLoad.hpp  FileOperate.cpp  FileOperate.h  HttpService.cpp  HttpService.hpp  List.h  String.cpp  String.h  ThreadsafeQueue.h  Ticker.h  TimeTicker.h  base64.cpp  base64.h  function_traits.h  json.cpp  json11.cpp  json11.hpp  local_time.cpp  local_time.h  logger.cpp  logger.h  logger.hpp  onceToken.h  semaphore.h  util.cpp  uv_errno.cpp  uv_errno.h
test/: Encode.cpp  N-1-N_example.cpp  app.cpp  record_example.cpp  test_example.cpp  test_example_1.cpp  test_example_2.cpp  test_http.cpp  test_infer_demo.cpp  test_muitlgpu_pipeline.cpp  test_pipeline.cpp  test_triton_client.cpp  test_triton_grpc_demo.cpp  test_triton_http_demo.cpp  test_triton_server_demo.cpp  test_triton_yolo_pipeline.cpp
tools/: onnx2trtengine.sh
(+233 files in other folders)
